# shopping-hero

./: .gitignore  pyproject.toml
.github/workflows/: dockerimage.yml  frontend-ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/core/: shop.py
backend/app/models/: shop.py
backend/app/schemas/: __init__.py  query.py
backend/shopping_hero/: __init__.py
backend/shopping_hero/core/: shop.py
backend/shopping_hero/models/: shop.py
backend/shopping_hero/schemas/: __init__.py  shop.py
frontend/: README.md  package.json
shopping_hero/schemas/: mutation.py  query.py
