[tool.poetry]
name = "shopping-hero"
version = "0.1.0"
description = ""
authors = ["Alexander Dmitriev <alexander.dmitriev2580@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
graphene = ">2.0"
starlette = "^0.13.2"
uvicorn = "^0.11.3"
sqlalchemy = "^1.3.13"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
flake8 = "^3.7.9"

[tool.poetry.scripts]
main = 'shopping-hero.main'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

